[project]
name = "test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=9.0.2",
    "keras==3.8.0",
    "matplotlib>=3.10.1",
    "optuna==4.2.0",
    "pandas==2.2.3",
    "scikit-learn==1.6.1",
    "shap==0.46.0",
    "tensorflow==2.18.0",
]
